shared/css/custom_styles.css
/* ... */
.jqx-grid-cell-left-align a {
	padding: .15rem .25rem;
	outline: 0;
}
.jqx-grid-cell-left-align a.hover, .jqx-grid-cell-left-align a:hover {
	padding: .15em .25rem;
	outline: 0;
}
.jqx-grid-cell-left-align a.focus, .jqx-grid-cell-left-align a:focus {
	padding: .15rem .25rem;
	outline: 0;
	box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
}
/* Editable cells in a jqx-grid */
.editable-cell {
	border-width: 1px 1px 1px 1px !important;
	border-color: #939393 !important;
}
p {
	margin-bottom: .75rem;
	line-height: normal;
	margin-top: 0;
	font-size: .95rem;
}
/*p:focus {
	box-shadow: 0 0 0 0;
}
div:focus, div > span:focus {
	box-shadow: 0 0 0 0;
}
div:focus, div > span:focus {
	box-shadow: 0 0 0 0;
}*/
.info {
	position: absolute;
	left: -9000px;
	width: 0;
	overflow: hidden;
}
.accordion >.card {
	overflow: hidden; 
}
a {
	color:#006ee3;/*not working for accessibility*/
	color: #0460c1;
}
.link-color {
	color: #006ee3;
}
.brackets {
	width: 5px;
	font-size: 24px;
	margin-top: -4px;
}
.warning {
	border: 5px solid red;
}
.sm-caps {
	font-variant: small-caps;
}
.input-group-text-sm {
	padding: .25rem .5rem !important;
}
.custom-form-input {
	height: calc(1rem + .375rem + .5rem);
}
.line-height-sm {
	line-height: 1.15;
}
.non-field-text {
	padding: .15rem .5rem;
	border-radius: .2rem;
	font-size: .875rem;
	font-weight: 500;
	line-height: 1.15rem;
}
.text-other {
	font-size: .875em;
	font-weight: 500;
}
#loanAgents tr {
	line-height: 1rem;
}
label {
	/* Override bootstrap label .5rem to reduce excess whitespace on forms. */
	margin-bottom: 0;
}
.border { /* bootstrap border override */
	border: 1px solid #bac5c6 !important;
}
.shadowbox {
	box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.09);
}
.bg-grayish {
	background-color: #F5F5F5;
}
.dotted-border {
	border: 2px dotted #bac5c6 !important;
}
.text-grayish {
	color: #f5f5f5;
}
.rounded-teal {/*used on locality search box*/
	border-top-left-radius: .65rem !important; 
	border-top-right-radius: .65rem !important;
}
/*********************************/
/* BELOW:    code for 3 searches */
/*********************************/
/************************
*************************
BELOW: Small Form button (bootstrap override)
************************/
.btn-xs { /*********Changed padding and font size to see if the text is more vertically aligned; vertical-align:middle; hasn't worked**********/
	display: inline-block;
	font-weight: 500;
	color: #212529;
	text-align: center;
	cursor: pointer;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	background-color: transparent;
	border: 1px solid #aaa;
	padding: .15rem .5rem .22rem .5rem;
	font-size: .875rem;
	line-height: 1.15rem;
	border-radius: .2rem;
}
button#showRelatedDataBtn.btn-xs {
	display: inline-block;
	font-weight: 500;
	text-align: center;
	cursor: pointer;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	background-color: transparent;
	border: 1px solid #aaa;
	padding: .15rem .5rem .22rem .5rem;
	font-size: .875rem;
	line-height: 1.15rem;
	border-radius: .2rem;
	color: #006ee3;
}
.btn-outline-primary {
	background-color: white;
}
.btn-info {
	color: #fff;
	background-color: #17a2b8;
	border: 1px solid hsl(0, 0%, 62%);
}
.btn-outline-success {
	color: #18780b;
	border-color: #18780b;
}
.date-field-forms {
	padding: .4rem .8rem .5rem .8rem;
	margin: .5rem .9rem .2rem 1.2rem;
}
/************************
*************************
BELOW: Main button (bootstrap override)
************************/
button:focus, input:focus, select:focus, button.focus, input.focus, select.focus {
	outline: 0;
	border: 1px dotted #ccc;
	box-shadow: 0 0 0 0.18rem rgb(0 123 255 / 40%);
	border-radius: .2rem;
}
span.data-entry-addon {
	cursor: pointer;
}
.btn-primary {
	background-color: #d9f1f3;
	border: 1px solid hsl(0, 0%, 56%, 1);
	color: buttontext;
}
.btn-sm {
	margin-top: 0;
	height: calc(1.5rem + .5rem + 1px);
}
.btn-primary:hover {
	/*background-color: #d3dfe0;*/
	color: #212529;
	background-color: #deebec;
	background: #deebec;
	border: 1px solid hsl(0, 2%, 47%);
}
.btn-primary:focus, .btn-primary.focus, span.data-entry-addon.focus, span.data-entry-addon:focus {
	background-color: #deebec;
	color: #212529;
	border: 1px solid #ced4da;
	outline: 0;
	box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
}
.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
	background-color: #deebec;
	color: #212529;
	border: 1px solid #ced4da;
}
.btn-powder-blue {
	color: #1b1b1b;
	letter-spacing: .04rem;
	background-color: #d9e8fa;
	border: 1px solid hsl(0, 0%, 62%);
	font-size: small;
	font-weight: 490;
}
.btn-powder-blue:hover {
	/*background-color: #d3dfe0;*/
	color: #fff;
	background: #54a4f9;
	letter-spacing: .04rem;
	border: 1px solid hsl(0, 2%, 47%);
}
.btn-secondary {
	background-color: #d7d7d7;
	background: #d7d7d7;
	border: 1px solid hsl(0, 0%, 62%);
	color: #212529;
	margin-top: 0;
}
.btn-secondary:hover {
	color: #212529;
	border: 1px solid hsl(0, 2%, 47%);
	background-color: rgba(220, 220, 220, .8);
}
.btn-secondary:focus, .btn-secondary.focus {
	background-color: #d7d7d7;
	color: #212529;
	border: 1px solid hsl(0, 2%, 47%);
	border-color: #ced4da;
	outline: 0;
	box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
}
.btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active, .show > .btn-secondary.dropdown-toggle {
	background-color: #d7d7d7;
	color: #212529;
	border: 1px solid hsl(0, 2%, 47%);
}
.btn-secondary.disabled, .btn-secondary:disabled {
	background-color: #d7d7d7;
	color: #999;
	border: 1px solid hsl(0, 2%, 47%);
	box-shadow: 0 0 0 0.02rem rgba(255, 255, 255, 0.5);
	box-shadow: none;
}
.btn-warning {
	background-color: #ffc10782;
	background: #ffc10782;
	border: 1px solid hsl(0, 0%, 56%, 1);
	color: buttontext;
	margin-top: 0;
}
/* ... */

